# hubbardEd

./: .gitignore  LICENSE.txt  README.md  plots.ipynb  pyproject.toml
hubbard_solve/: __init__.py  hubbard.py
src/hubbardEd/analog/: __init__.py  basis.py  hamiltonian.py
src/hubbardEd/bitmapped/: __init__.py  basis.py  hamiltonian.py  observables.py  time_prop.py  types.py  utils.py
src/hubbardEd/cavity/: __init__.py  basis_cav.py  hamiltonian_cav.py  observables_cav.py  types_cav.py
test/: test_hubbard.py
tests/: test_analog.py  test_bitmapped.py  test_cavity.py
