[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hubbardEd"
version = "0.1.0"
description = "Exact diagonalization tools for the 1D Fermi-Hubbard model"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"numpy>=1.24",
	"scipy>=1.10",
]

[project.optional-dependencies]
plot = [
	"matplotlib>=3.7",
]
dev = [
	"pytest>=8.0",
	"matplotlib>=3.7",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["hubbardEd*"]
